turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:2: error: Missing closing brace `}' assumed here
var rule:Array[Array[Array[Int]]] = Array(Array(Array(1,8,0),Array(0,1,0),Array(Array(1,8,1),Array(0,1,1)))) 
^Turmite:2: error: expected class or object definition
var rule:Array[Array[Array[Int]]] = Array(Array(Array(1,8,0),Array(0,1,0),Array(Array(1,8,1),Array(0,1,1)))) 
^Turmite:3: error: expected class or object definition
val nbSteps:Int = 8342; 
^Turmite:5: error: expected class or object definition
def initLangton(name:String) {
^Turmite:25: error: Missing closing brace `}' assumed here
def step(){
^